{add changes to html file]

--- a/index.html
+++ b/index.html
@@ -11,7 +11,26 @@
     <div class="tip">
         (Click anywhere to hear sound...)
     </div>
-
+    <div id='checkboxes'>
+        <div>
+            <input type="checkbox" id="kick-drum" value = "kick-drum">
+            <label for ="kick-drum">Kick Drum</label>
+        </div>
+        <div>
+            <input type="checkbox" id="hi-hat" value = "hi-hat">
+            <label for ="hi-hat">Hi Hat</label>
+        </div>
+        <div>
+            <input type="checkbox" id="snare-drum" value = "snare-drum">
+            <label for ="snare-drum">Snare Drum</label>
+        </div>
+        <div>
+            <input type="checkbox" id="metronome" value = "metronome">
+            <label for ="metronome">Metronome</label>
+        </div>
+    </div>
+    <div id ="timer">
+    </div>
     <div class="metronome">
         <div class="background-left"></div>
         <div class="background-center">
